# bifrost

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml
.cursor/: worktrees.json
.cursor/rules/: benchmarking.mdc  general.mdc
.github/workflows/: ci.yml
examples/: connection_pools.yaml  docker-test.yaml  failover.yaml  failover_test.yaml  miss_failover.yaml  pools.yaml  side_effect_test.yaml  simple.yaml  test.yaml
src/: config.rs  lib.rs  main.rs  server.rs
src/core/: backend.rs  connection_pool.rs  listener.rs  metrics.rs  mod.rs  pool.rs  protocol.rs  route_table.rs  router.rs  side_effect.rs  strategy.rs
src/core/protocols/: ascii.rs  blind_forward.rs  mod.rs
src/core/strategy/: blind_forward.rs  failover.rs  least_latency.rs  miss_failover.rs  mod.rs  round_robin.rs
tests/: README.md  TESTING.md  benchmark_client.py  config_loading_test.rs  connection_pool_test.rs  failover_test.rs  integration_tests.rs  miss_failover_test.rs  pool_integration_test.rs  protocol_integration_test.rs  route_table_test.rs
tests/benchmark/: Makefile  README.md  benchmark_analysis.py  benchmark_config.yaml  docker-compose-benchmark.yml  mcrouter-benchmark.json  mcrouter-config.json  remote_bootstrap.sh  run_benchmark.sh  run_on_ec2.sh
tests/benchmark/benchmark_results/: .gitignore
tests/benchmark/configs/: high_read_heavy.yaml  large_values.yaml  light_read_heavy.yaml  (+3 more)
tests/e2e/: proxy_test.sh
tests/integration/: README.md  mod.rs
tools/memcache-debug/: README.md  debug_server.rb  servers.yml
(+13 files in other folders)
