[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async
async-trait = "0.1"
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "fs", "io-util", "signal"] }

# Socket optimization
socket2 = "0.5"

# Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }
