[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async
async-trait = "0.1"
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "fs", "io-util", "signal"] }
futures = "0.3"

# Connection pooling
bb8 = "0.8"

# Socket optimization
socket2 = "0.5"

# Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# CLI
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
rstest = "0.18"
tokio-test = "0.4"
assert_matches = "1.5"
